--- a/Power_Energy_Prediction_Random_forest_regression.ipynb
+++ b/Power_Energy_Prediction_Random_forest_regression.ipynb
@@ -24,8 +24,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+
       ],
       "metadata": {
         "colab": {
@@ -40,7 +39,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+
           ]
         }
       ]
@@ -82,7 +81,7 @@
         "id": "adBE4tjQX_Bh"
       },
       "source": [
-        "dataset = pd.read_csv('/content/drive/MyDrive/My Online Training/Python/Udamey/Machine Learning A-Z™: Hands-On Python & R In Data Science/Part 2 - Regression/Model Evaluations - Regression/Regression/Power_consumption.csv')\n",
+        "dataset = pd.read_csv('Regression/Power_consumption.csv')\n",
         "X = dataset.iloc[:, :-1].values\n",
         "y = dataset.iloc[:, -1].values"
       ],
